2008-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-page.h : 
        Added function to return the scroll amount of the page

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher-app.c
	* src/launcher/hd-launcher-app.h
	* src/launcher/hd-launcher.c:
	Added application launcher transition

	* src/mb/hd-app.c: 
	Added call to remove application start transition when an 
	application window is shown.

2008-12-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c: hd_comp_mgr_map_notify():
	  Replace 3+ subsequent stackable windows correctly in the switcher.

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-switcher.c (hd_switcher_menu_clicked): Move the call to
	ungrab the pointer to hildon-home. So the desktop does not freeze if
	hildon-home is not running.

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-switcher.c (hd_switcher_show_menu_button): Hide status
	  area. Set the size of the menu button to the size of switcher and
	  staus area.
	  (hd_switcher_hide_menu_button): Show status area.

2008-12-02  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c
	Made all lines <80 chars long	

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_pan_full): Hide edit button on pan.
	  (hd_home_show_edit_button): Add edit button area to input viewport
	  instead of the grab.
	  (hd_home_hide_edit_button): Remove edit button area from input
	  viewport.
	* src/home/hd-home.h: Make hd_home_hide_edit_button public.

	* src/home/hd-switcher.c (hd_switcher_clicked): Hide edit button if
	  switcher is clicked.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_setup_input_viewport,
	  hd_comp_mgr_turn_on): Update hd_comp_mgr_setup_input_viewport
	  function to accept an array of ClutterGeometry.
	  (hd_comp_mgr_map_notify): Hide edit button if a window is mapped.